<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_theme"
    android:orientation="vertical"
    android:textAlignment="center"
    tools:context=".SubActivityTrigger">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btn_goback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:gravity="left"
            android:src="@drawable/arrow_left" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/trigger_warning"
            android:textAlignment="center"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="56dp"
        android:layout_marginRight="20dp"
        android:gravity="clip_horizontal"
        android:orientation="horizontal"
        android:background="@drawable/round_edge"
        android:backgroundTint="#373737">

        <CheckBox
            android:id="@+id/trigger_item1"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:buttonTint="@color/white"
            android:text="@string/trigger_blood"
            android:textColor="@color/text"
            android:textSize="13sp" />

        <CheckBox
            android:id="@+id/trigger_item2"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginTop="10dp"
            android:buttonTint="@color/white"
            android:text="@string/trigger_circle"
            android:textColor="@color/text"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/trash_can"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginRight="9dp"
                android:src="@drawable/trash_can" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_add"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="94dp"
        android:background="@drawable/round_edge"
        android:backgroundTint="@color/white"
        android:text="@string/add"
        android:textSize="20sp" />
    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="23dp"
        android:background="@drawable/round_edge"
        android:backgroundTint="@color/white"
        android:text="@string/confirm"
        android:textSize="20sp" />
</LinearLayout>